adding libraries and includes for linux devices

--- a/.vscode/linux/tasks.json
+++ b/.vscode/linux/tasks.json
@@ -10,6 +10,8 @@
                 "${file}",
                 "-o",
                 "${workspaceFolder}/output/${fileBasenameNoExtension}",
+                "-I${workspaceFolder}/include",
+                "-L${workspaceFolder}/lib",
                 "-lglut",
                 "-lGLU",
                 "-lGL",
